--- a/mian.css
+++ b/mian.css
@@ -60,8 +60,10 @@ font-family: sans-serif
 }
 
 #result-image {
-display: inline-block;
-border: 10px solid green;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .choice{display: inline-block;
